Changes to schema and write mode

--- a/Data Ingestion.ipynb
+++ b/Data Ingestion.ipynb
@@ -488,7 +488,7 @@
     "                               datetime.strptime(items[1], \"%Y-%m-%d %H:%M:%S.%f\"), \n",
     "                               Decimal(items[7]),\n",
     "                               None, \n",
-    "                               int(items[8]),\n",
+    "                               None,\n",
     "                               None,\n",
     "                               None,\n",
     "                               \"T\",\n",
@@ -1309,7 +1309,7 @@
     "                                datetime.strptime(line_obj['file_tm'],\"%Y-%m-%d %H:%M:%S.%f\"), \n",
     "                                Decimal(line_obj['price']),\n",
     "                                None,\n",
-    "                                int(line_obj['size']),\n",
+    "                                None,\n",
     "                                None,\n",
     "                                None,\n",
     "                                'T',\n",
@@ -1867,7 +1867,7 @@
     "    rawcsv = sc.textFile(path)\n",
     "    parsedcsv = rawcsv.map(lambda line: parse_csv(line))\n",
     "    csvdata = spark.createDataFrame(parsedcsv, schema=CommonEventSchema)\n",
-    "    csvdata.write.partitionBy('partition').mode('overwrite').parquet('/mnt/parsed/')"
+    "    csvdata.write.partitionBy('partition').mode('append').parquet('/mnt/parsed/')"
    ]
   },
   {
@@ -1891,7 +1891,7 @@
     "    rawjson = sc.textFile(path)\n",
     "    parsedjson = rawjson.map(lambda line: parse_json(line))\n",
     "    jsondata = spark.createDataFrame(parsedjson, schema=CommonEventSchema)\n",
-    "    jsondata.write.partitionBy('partition').mode('overwrite').parquet('/mnt/parsed/')"
+    "    jsondata.write.partitionBy('partition').mode('append').parquet('/mnt/parsed/')"
    ]
   },
   {
@@ -1914,26 +1914,82 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[FileInfo(path='dbfs:/mnt/parsed/partition=Q/_SUCCESS', name='_SUCCESS', size=0, modificationTime=1712442343000),\n",
+       "[FileInfo(path='dbfs:/mnt/parsed/partition=Q/_committed_113335365130784487', name='_committed_113335365130784487', size=413, modificationTime=1712879359000),\n",
+       " FileInfo(path='dbfs:/mnt/parsed/partition=Q/_committed_4752643872308204656', name='_committed_4752643872308204656', size=415, modificationTime=1712879367000),\n",
        " FileInfo(path='dbfs:/mnt/parsed/partition=Q/_committed_5514179102496910154', name='_committed_5514179102496910154', size=224, modificationTime=1712442339000),\n",
+       " FileInfo(path='dbfs:/mnt/parsed/partition=Q/_committed_5871830649527736979', name='_committed_5871830649527736979', size=419, modificationTime=1712879356000),\n",
        " FileInfo(path='dbfs:/mnt/parsed/partition=Q/_committed_5876140355702659561', name='_committed_5876140355702659561', size=423, modificationTime=1712442341000),\n",
+       " FileInfo(path='dbfs:/mnt/parsed/partition=Q/_committed_6661674576119134228', name='_committed_6661674576119134228', size=413, modificationTime=1712879366000),\n",
        " FileInfo(path='dbfs:/mnt/parsed/partition=Q/_committed_8012874387339221082', name='_committed_8012874387339221082', size=423, modificationTime=1712442343000),\n",
        " FileInfo(path='dbfs:/mnt/parsed/partition=Q/_committed_8546968045100134472', name='_committed_8546968045100134472', size=434, modificationTime=1712442340000),\n",
-       " FileInfo(path='dbfs:/mnt/parsed/partition=Q/_started_5514179102496910154', name='_started_5514179102496910154', size=0, modificationTime=1712442338000),\n",
-       " FileInfo(path='dbfs:/mnt/parsed/partition=Q/_started_5876140355702659561', name='_started_5876140355702659561', size=0, modificationTime=1712442341000),\n",
-       " FileInfo(path='dbfs:/mnt/parsed/partition=Q/_started_8012874387339221082', name='_started_8012874387339221082', size=0, modificationTime=1712442342000),\n",
-       " FileInfo(path='dbfs:/mnt/parsed/partition=Q/_started_8546968045100134472', name='_started_8546968045100134472', size=0, modificationTime=1712442340000),\n",
-       " FileInfo(path='dbfs:/mnt/parsed/partition=Q/part-00000-tid-8012874387339221082-44e3f61e-c007-4b32-80be-9c8a959ec936-254-2.c000.snappy.parquet', name='part-00000-tid-8012874387339221082-44e3f61e-c007-4b32-80be-9c8a959ec936-254-2.c000.snappy.parquet', size=4915, modificationTime=1712442343000),\n",
-       " FileInfo(path='dbfs:/mnt/parsed/partition=Q/part-00001-tid-8012874387339221082-44e3f61e-c007-4b32-80be-9c8a959ec936-255-2.c000.snappy.parquet', name='part-00001-tid-8012874387339221082-44e3f61e-c007-4b32-80be-9c8a959ec936-255-2.c000.snappy.parquet', size=4917, modificationTime=1712442342000)]"
+       " FileInfo(path='dbfs:/mnt/parsed/partition=Q/_committed_vacuum4954286271358619773', name='_committed_vacuum4954286271358619773', size=195, modificationTime=1712879357000),\n",
+       " FileInfo(path='dbfs:/mnt/parsed/partition=Q/_started_113335365130784487', name='_started_113335365130784487', size=0, modificationTime=1712879359000),\n",
+       " FileInfo(path='dbfs:/mnt/parsed/partition=Q/_started_4752643872308204656', name='_started_4752643872308204656', size=0, modificationTime=1712879367000),\n",
+       " FileInfo(path='dbfs:/mnt/parsed/partition=Q/_started_5871830649527736979', name='_started_5871830649527736979', size=0, modificationTime=1712879356000),\n",
+       " FileInfo(path='dbfs:/mnt/parsed/partition=Q/_started_6661674576119134228', name='_started_6661674576119134228', size=0, modificationTime=1712879366000),\n",
+       " FileInfo(path='dbfs:/mnt/parsed/partition=Q/part-00000-tid-4752643872308204656-30b9a3b6-3d2e-428b-a3ce-be62aa9d604f-6-2.c000.snappy.parquet', name='part-00000-tid-4752643872308204656-30b9a3b6-3d2e-428b-a3ce-be62aa9d604f-6-2.c000.snappy.parquet', size=4915, modificationTime=1712879367000),\n",
+       " FileInfo(path='dbfs:/mnt/parsed/partition=Q/part-00001-tid-4752643872308204656-30b9a3b6-3d2e-428b-a3ce-be62aa9d604f-7-2.c000.snappy.parquet', name='part-00001-tid-4752643872308204656-30b9a3b6-3d2e-428b-a3ce-be62aa9d604f-7-2.c000.snappy.parquet', size=4917, modificationTime=1712879367000)]"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dbutils.fs.ls('/mnt/parsed/partition=Q')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "50e6b985-34a0-4431-9b53-123518d98446",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "loadedDf = spark.read.parquet('/mnt/parsed/*/*.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "36ff2d11-d115-4ef7-8d5a-3a3ba5453556",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1200"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loadedDf.count()"
    ]
   }
  ],
