Refactored databricks jobs for orchestration

--- a/Analytical ETL.ipynb
+++ b/Analytical ETL.ipynb
@@ -64,7 +64,8 @@
    },
    "outputs": [],
    "source": [
-    "trade_date = '2020-08-06'"
+    "trade_date = '2020-08-06'\n",
+    "# in real runtime this would be datetime.today().strftime('%Y-%m-%d')"
    ]
   },
   {
@@ -348,35 +349,6 @@
    "outputs": [],
    "source": [
     "quote_union_update.createOrReplaceTempView(\"quote_union_update\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "1d34e5b2-3994-4e10-a062-4d453c863049",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----------+--------+------+--------------------+------------+--------+------+--------+------+--------+--------+----------+-------------+---------------+\n|  trade_dt|rec_type|symbol|            event_tm|event_seq_nb|exchange|bid_pr|bid_size|ask_pr|ask_size|trade_pr|mov_avg_pr|last_trade_pr|last_mov_avg_pr|\n+----------+--------+------+--------------------+------------+--------+------+--------+------+--------+--------+----------+-------------+---------------+\n|2020-08-06|       T|  SYMA|2020-08-06 22:00:...|        NULL|    NYSE|  NULL|    NULL|  NULL|    NULL|      76|   76.5000|           76|        76.5000|\n|2020-08-06|       Q|  SYMA|2020-08-06 21:51:...|          99|    NYSE|    77|     100|    77|     100|    NULL|      NULL|           76|        76.5000|\n|2020-08-06|       Q|  SYMA|2020-08-06 21:43:...|          98|    NYSE|    76|     100|    76|     100|    NULL|      NULL|           76|        76.5000|\n|2020-08-06|       Q|  SYMA|2020-08-06 21:36:...|          97|    NYSE|    79|     100|    79|     100|    NULL|      NULL|           76|        76.5000|\n|2020-08-06|       T|  SYMA|2020-08-06 21:33:...|        NULL|  NASDAQ|  NULL|    NULL|  NULL|    NULL|      77|   76.5000|           76|        76.5000|\n+----------+--------+------+--------------------+------------+--------+------+--------+------+--------+--------+----------+-------------+---------------+\n\n"
-     ]
-    }
-   ],
-   "source": [
-    "spark.sql('select * from quote_union_update limit 5').show()"
    ]
   },
   {
