switching to overwrite mode

--- a/Data Loads.ipynb
+++ b/Data Loads.ipynb
@@ -222,8 +222,8 @@
    },
    "outputs": [],
    "source": [
-    "quote_corrected.write.partitionBy('trade_dt').parquet('/mnt/loaded/quote/')\n",
-    "trade_corrected.write.partitionBy('trade_dt').parquet('mnt/loaded/trade/')"
+    "quote_corrected.write.mode('overwrite').partitionBy('trade_dt').parquet('/mnt/loaded/quote/')\n",
+    "trade_corrected.write.mode('overwrite').partitionBy('trade_dt').parquet('mnt/loaded/trade/')"
    ]
   }
  ],
